--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@
     font-size: 5rem;
     font-family: 'Oswald', sans-serif;
     color: rgb(196, 68, 68);
-    background-color: aliceblue;
+    background-color: rgb(18, 102, 35);
     text-align: center;
 }
 
@@ -49,7 +49,7 @@ html {
 
 
 .dropdown-content a {
-    color:rgb(207, 24, 24);
+    color:rgb(255, 255, 255);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -107,7 +107,7 @@ html {
 }
 
 .purchase-donut-multiplier-button {
-    background-color: plum; 
+    background-color: rgb(226, 43, 43); 
     border: none;
     color: white;
     padding: 30px;
@@ -149,7 +149,7 @@ html {
 }
 
 .donut-count-text {
-    background-color: navy; 
+    background-color: rgb(224, 214, 71); 
     border: none;
     color: white;
     padding: 30px;
@@ -161,11 +161,7 @@ html {
     cursor:pointer;
     border-radius: 4%;
     
-    /* width: 200px;
-    height: 200px;
-    background-color: blueviolet;
-    font-size: 2rem;
-    text-align: center; */
+    
 }
 
 .auto-clicker-count {
@@ -179,7 +175,7 @@ html {
 }
 
 .auto-clicker-text {
-    background-color:blueviolet; 
+    background-color:rgb(74, 187, 52); 
     border: none;
     color: white;
     padding: 30px;
@@ -190,11 +186,7 @@ html {
     margin: 20px;
     cursor:pointer;
     border-radius: 4%;
-    /* width: 200px;
-    height: 200px;
-    background-color: blueviolet;
-    font-size: 2rem;
-    text-align: center; */
+    
 }
 
 .donut-multiplier-count {
@@ -208,7 +200,7 @@ html {
 }
 
 .donut-multiplier-text {
-    background-color: plum; 
+    background-color: rgb(48, 184, 48); 
     border: none;
     color: white;
     padding: 30px;
@@ -219,16 +211,12 @@ html {
     margin: 20px;
     cursor: pointer;
     border-radius: 4%;
-    /* width: 200px;
-    height: 300px;
-    background-color: blueviolet;
-    font-size: 2rem;
-    text-align: center;  */
+    
 }
 
-/* ----------------------------------Trying Modal----------------------------------------------- */
 
-.backdrop {
+
+/* .backdrop {
     display: none;
     position: fixed;
     width: 100%;
@@ -237,7 +225,7 @@ html {
     left: 0%;
     background: rgba(0, 0, 0, .5);
     z-index: 100;
-   }
+   } */
 
 .modal {
     display: none;
@@ -247,7 +235,7 @@ html {
     left: 25%;
     width: 40%;
     height: 40%;
-    background: rgb(255, 192, 250);
+    background: rgb(56, 39, 218);
     box-shadow: 1px 1px 6px  rgba(0, 0, 0, 0.4);
     padding: 1rem;
 }
@@ -273,7 +261,7 @@ html {
     left: 25%;
     width: 40%;
     height: 40%;
-    background: rgb(255, 192, 250);;
+    background: rgb(29, 175, 102);;
     box-shadow: 1px 1px 6px  rgba(0, 0, 0, 0.4);
     padding: 1rem;
 }
